[package]
name = "logtool"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.28.0", features = ["accesskit", "serde"] }
egui_extras = { version = "0.28.0", features = ["serde"] }
eframe = { version = "0.28.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
notify = "6.1.1"
egui_tiles = "0.9.0"
rfd = "0.14.1"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["full"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

