[package]
name = "logglance"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_extras = { version = "0.28.1", features = ["serde"] }
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
encoding_rs = { version = "0.8.34", features = ["serde"] }
notify = "6.1.1"
egui_tiles = "0.9.0"
rfd = "0.14.1"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["full"] }
regex = "1.10.5"
rayon = "1.10.0"
humansize = "2.1.3"
chardetng = { version = "0.1.17", features = ["multithreading"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

